# moveit_task_constructor

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .prepare_overlay.sh  .repos  .rosinstall  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  codecov.yaml  motion_planning_stages_plugin_description.xml  motion_planning_tasks_rviz_plugin_description.xml  moveit.rosinstall  notes.org  package.xml  pick+place.org  task_panel_rviz_plugin_description.xml  task_solution_rviz_plugin_description.xml  test.py
capabilities/: CHANGELOG.rst  CMakeLists.txt  capabilities_plugin_description.xml  package.xml
capabilities/src/: execute_task_solution_capability.cpp  execute_task_solution_capability.h  plan_pick_place_capability.cpp  plan_pick_place_capability.h
capabilities/test/: CMakeLists.txt  test_execution.launch.py  test_task_execution.cpp
core/: CHANGELOG.rst  CMakeLists.txt  motion_planning_stages_plugin_description.xml  package.xml  rosdoc.yaml  setup.py
core/cmake/: pybind11.cmake.in
core/demo/: CMakeLists.txt  plan_pick_pa10.cpp  plan_pick_pr2.cpp  plan_pick_trixi.cpp  plan_pick_ur5.cpp
core/doc/: Doxyfile  api.rst  basics.rst  concepts.rst  conf.py  connecting_stages.rst  generating_stages.rst  howto.rst  howtocpp.rst  howtoguides.rst  index.rst  parallel_containers.rst  propagating_stages.rst  reference.rst  requirements.txt  troubleshooting.rst  tut_cartesian.rst  tut_first-steps.rst  tut_pick-and-place.rst  tut_properties.rst  tutorials.rst  wrappers.rst
core/doc/tutorials/: cartesian.rst  index.rst  (+2 more)
core/python/: CMakeLists.txt  conversions.cpp  conversions.h  core.cpp  properties.cpp  ros_init.cpp  solvers.cpp  stages.cpp  task.cpp  test_script.py
core/scope_guard/: CMakeLists.txt
core/src/: CMakeLists.txt  container.cpp  cost_terms.cpp  execution.cpp  introspection.cpp  marker_tools.cpp  merge.cpp  properties.cpp  stage.cpp  storage.cpp  task.cpp  utils.cpp
core/test/: CMakeLists.txt  gtest_value_printers.cpp  gtest_value_printers.h  models.cpp  models.h  move_relative.test  move_to.launch.py  move_to.test  pick_pa10.cpp  pick_pa10.test  pick_pr2.cpp  pick_pr2.test  pick_ur5.cpp  pick_ur5.test  stage_mockups.cpp  stage_mockups.h  test.launch.py  test_container.cpp  test_cost_queue.cpp  test_cost_terms.cpp  test_fallback.cpp  test_interface_state.cpp  test_limit_solutions.cpp  test_mockups.cpp  test_move_circle.cpp  test_move_relative.cpp  test_move_to.cpp  test_move_to_pilz.cpp  test_pipeline_planner.cpp  test_plan_cartesian_forward.cpp  test_plan_current_state.cpp  test_plan_generate_grasp_pose.cpp  test_plan_gripper.cpp  test_properties.cpp  test_pruning.cpp  test_serial.cpp  test_stage.cpp  test_stage.launch  test_storage.cpp
demo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
demo/config/: mtc.rviz  panda_config.yaml
demo/launch/: alternative_path_costs.launch.py  cartesian.launch.py  demo.launch  demo.launch.py  fallbacks_move_to.launch.py  ik_clearance_cost.launch.py  modular.launch.py  pickplace.launch  pickplace.launch.py  run.launch.py
demo/scripts/: alternatives.py  cartesian.py  compute_ik.py  constrained.py  current_state.py  fallbacks.py  fix_collision_objects.py  fixed_state.py  generate_pose.py  grasp.py  merger.py  modify_planning_scene.py  multi_planner.py  pick.py  pickplace.py  properties.py
demo/src/: alternative_path_costs.cpp  cartesian.cpp  ctrl_change.cpp  fallbacks_move_to.cpp  ik_clearance_cost.cpp  ik_clearance_cost_parameters.yaml  modular.cpp  moveit_task_constructor_demo.cpp  pick_place_demo.cpp  pick_place_demo_parameters.yaml  pick_place_task.cpp
demo/test/: CMakeLists.txt  pick_place.test  pick_place_test.cpp  pickplace_demo.test  test_pickplace_demo.cpp
msgs/: CHANGELOG.rst  CMakeLists.txt  notes_from_moveit_msgs.action  package.xml
msgs/action/: ExecuteTaskSolution.action  PlanPickPlace.action  SampleGraspPoses.action
msgs/msg/: Property.msg  Solution.msg  SolutionInfo.msg  StageDescription.msg  StageStatistics.msg  SubSolution.msg  SubTrajectory.msg  TaskDescription.msg  TaskStatistics.msg  TrajectoryExecutionInfo.msg
rviz_marker_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
rviz_marker_tools/src/: marker_creation.cpp
src/: CMakeLists.txt  container.cpp  container_p.h  debug.cpp  introspection.cpp  introspection_publisher.cpp  plan_pick.cpp  stage.cpp  stage_p.h  storage.cpp  subtask.cpp  subtask_p.h  task.cpp
src/demo/: CMakeLists.txt  plan_pick_pa10.cpp  plan_pick_trixi.cpp  plan_pick_ur5.cpp  test.cpp
src/stages/: CMakeLists.txt  cartesian_position_motion.cpp  current_state.cpp  fix_collision_objects.cpp  generate_grasp_pose.cpp  gripper.cpp  modify_planning_scene.cpp  move.cpp
src/subtasks/: CMakeLists.txt  cartesian_position_motion.cpp  current_state.cpp  generate_grasp_pose.cpp  gripper.cpp  move.cpp
src/test/: CMakeLists.txt  container.cpp  test_container.cpp  test_cost_queue.cpp  test_plan_cartesian_forward.cpp  test_plan_current_state.cpp  test_plan_generate_grasp_pose.cpp  test_plan_gripper.cpp  test_task_model.cpp  test_task_model.launch
visualization/: CHANGELOG.rst  CMakeLists.txt  motion_planning_tasks_rviz_plugin_description.xml  package.xml
visualization/motion_planning_tasks/: CMakeLists.txt  composite_proxy_model.cpp  composite_proxy_model.h  factory_model.cpp  factory_model.h  job_queue.cpp  job_queue.h  local_task_model.cpp  local_task_model.h  mainloop_processing.h  plugin_init.cpp  pluginlib_factory.h  remote_task_model.cpp  remote_task_model.h  stage_wrapper.cpp  stage_wrapper.h  task_display.cpp  task_display.h  task_list_model.cpp  task_list_model.h  task_list_model_cache.cpp  task_list_model_cache.h  task_model.cpp  task_model.h  task_model_cache.cpp  task_model_cache.h  task_panel.cpp  task_panel.h  task_panel.ui  task_panel_p.h
visualization/task_panel/: CMakeLists.txt  mainloop_processing.cpp  task_model.cpp  task_panel.cpp  task_panel.ui
visualization/task_solution_display/: CMakeLists.txt  plugin_init.cpp  task_solution_display.cpp  task_solution_display.h
visualization/visualization_tools/: CMakeLists.txt
(+253 files in other folders)
