<package>
	<name>moveit_task_constructor</name>
	<version>0.0.0</version>
	<description>package</description>
	<license>BSD</license>
	<maintainer email="me@v4hn.de">Michael Goerner</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>moveit_core</build_depend>
	<run_depend>moveit_core</run_depend>

</package>
