<package>
	<name>moveit_task_constructor</name>
	<version>0.0.0</version>
	<description>MoveIt Task Pipeline</description>

	<license>BSD</license>
	<maintainer email="me@v4hn.de">Michael Goerner</maintainer>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>moveit_core</build_depend>
	<build_depend>moveit_ros_planning</build_depend>
	<build_depend>moveit_ros_planning_interface</build_depend>
	<build_depend>moveit_msgs</build_depend>
	<build_depend>rviz</build_depend>

	<run_depend>moveit_core</run_depend>
	<run_depend>moveit_msgs</run_depend>
	<run_depend>rviz</run_depend>

	<test_depend>rosunit</test_depend>

	<export>
		<rviz plugin="${prefix}/task_panel_rviz_plugin_description.xml"/>
	</export>
</package>
