<package format="2">
	<name>moveit_task_constructor_capabilities</name>
	<version>0.0.0</version>
	<description>
	MoveGroupCapabilites to interact with MoveIt
	</description>

	<maintainer email="me@v4hn.de">Michael v4hn Goerner</maintainer>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

	<license>BSD</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>moveit_core</depend>
	<depend>moveit_ros_move_group</depend>
	<depend>rclcpp_action</depend>
	<depend>pluginlib</depend>
	<depend>std_msgs</depend>
	<depend>moveit_task_constructor_msgs</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
