<package format="2">
	<name>moveit_task_constructor_core</name>
	<version>0.0.0</version>
	<description>MoveIt Task Pipeline</description>

	<license>BSD</license>
	<maintainer email="me@v4hn.de">Michael Goerner</maintainer>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<exec_depend>roscpp</exec_depend>

	<depend>eigen_conversions</depend>
	<depend>geometry_msgs</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>moveit_task_constructor_msgs</depend>
	<depend>visualization_msgs</depend>
	<depend>rviz_marker_tools</depend>

	<test_depend>rosunit</test_depend>
	<test_depend>rostest</test_depend>
	<test_depend>moveit_resources_fanuc_moveit_config</test_depend>

	<export>
		<moveit_task_constructor_core plugin="${prefix}/motion_planning_stages_plugin_description.xml"/>
	</export>
</package>
