<package format="3">
	<name>moveit_task_constructor_core</name>
	<version>0.1.3</version>
	<description>MoveIt Task Pipeline</description>

	<url type="website">https://github.com/moveit/moveit_task_constructor</url>
	<url type="repository">https://github.com/moveit/moveit_task_constructor</url>
	<url type="bugtracker">https://github.com/moveit/moveit_task_constructor/issues</url>

	<license>BSD</license>
	<maintainer email="me@v4hn.de">Michael Goerner</maintainer>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>

	<depend>fmt</depend>
	<depend>geometry_msgs</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>moveit_task_constructor_msgs</depend>
	<depend>py_binding_tools</depend>
	<depend>rclcpp</depend>
	<depend>rviz_marker_tools</depend>
	<depend>tf2_eigen</depend>
	<depend>visualization_msgs</depend>

	<test_depend>ament_cmake_gmock</test_depend>
	<test_depend>ament_cmake_gtest</test_depend>
	<test_depend>ament_cmake_pytest</test_depend>
	<test_depend>moveit_configs_utils</test_depend>
	<!-- TODO(JafarAbdi): Enable after porting integration tests-->
	<!-- test_depend>launch</test_depend -->
	<!-- test_depend>launch_testing</test_depend -->
	<test_depend>launch_testing_ament_cmake</test_depend>
	<!-- test_depend>launch_testing_ros</test_depend -->
	<test_depend>moveit_resources_fanuc_moveit_config</test_depend>
	<test_depend>moveit_planners</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
