<package format="3">
	<name>moveit_task_constructor_core</name>
	<version>0.1.3</version>
	<description>MoveIt Task Pipeline</description>

	<url type="website">https://github.com/moveit/moveit_task_constructor</url>
	<url type="repository">https://github.com/moveit/moveit_task_constructor</url>
	<url type="bugtracker">https://github.com/moveit/moveit_task_constructor/issues</url>

	<license>BSD</license>
	<maintainer email="me@v4hn.de">Michael Goerner</maintainer>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
	<buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>roslint</build_depend>
	<exec_depend>roscpp</exec_depend>

	<depend>fmt</depend>
	<depend>tf2_eigen</depend>
	<depend>geometry_msgs</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>moveit_task_constructor_msgs</depend>
	<depend>py_binding_tools</depend>
	<depend>visualization_msgs</depend>
	<depend>rviz_marker_tools</depend>

	<test_depend>rosunit</test_depend>
	<test_depend>rostest</test_depend>
	<test_depend>moveit_resources_fanuc_moveit_config</test_depend>
	<test_depend>moveit_planners</test_depend>
	<test_depend>moveit_commander</test_depend>

	<export>
		<moveit_task_constructor_core plugin="${prefix}/motion_planning_stages_plugin_description.xml" />
	</export>
</package>
