<?xml version="1.0"?>
<package format="2">
  <name>moveit_task_constructor_demo</name>
  <version>0.0.1</version>
  <description>demo tasks illustrating various capabilities of MTC.</description>

  <author email="simongold@picknik.ai">simon Goldstein</author>
  <author email="henningkayser@picknik.ai">Henning Kayser</author>
  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosparam_shortcuts</depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <depend>moveit_task_constructor_core</depend>

  <exec_depend>moveit_task_constructor_capabilities</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>

  <test_depend>rostest</test_depend>
</package>
