<?xml version="1.0"?>
<package format="2">
  <name>moveit_task_constructor_demo</name>
  <version>0.1.3</version>
  <description>demo tasks illustrating various capabilities of MTC.</description>

  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
  <author email="simongold@picknik.ai">Simon Goldstein</author>
  <author email="henningkayser@picknik.ai">Henning Kayser</author>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>generate_parameter_library</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>moveit_task_constructor_capabilities</exec_depend>
  <exec_depend>py_binding_tools</exec_depend>

  <export>
        <build_type>ament_cmake</build_type>
  </export>
</package>
