<?xml version="1.0"?>
<package format="2">
  <name>moveit_task_constructor_demo</name>
  <version>0.1.3</version>
  <description>demo tasks illustrating various capabilities of MTC.</description>

  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
  <author email="simongold@picknik.ai">Simon Goldstein</author>
  <author email="henningkayser@picknik.ai">Henning Kayser</author>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosparam_shortcuts</depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <depend>moveit_task_constructor_core</depend>

  <exec_depend>moveit_task_constructor_capabilities</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>py_binding_tools</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>moveit_fake_controller_manager</test_depend>
</package>
