<package format="2">
	<name>moveit_task_constructor_msgs</name>
	<version>0.1.3</version>
	<description>Messages for MoveIt Task Pipeline</description>

	<license>BSD</license>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
	<maintainer email="me@v4hn.de">Michael Goerner</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>message_generation</depend>
	<depend>moveit_msgs</depend>
	<depend>visualization_msgs</depend>

	<exec_depend>message_runtime</exec_depend>
</package>
