<package format="3">
	<name>moveit_task_constructor_msgs</name>
	<version>0.1.3</version>
	<description>Messages for MoveIt Task Pipeline</description>

	<license>BSD</license>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
	<maintainer email="me@v4hn.de">Michael Goerner</maintainer>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>moveit_msgs</depend>
	<depend>visualization_msgs</depend>

	<exec_depend>rosidl_default_runtime</exec_depend>

	<build_depend>rosidl_default_generators</build_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
    	<build_type>ament_cmake</build_type>
 	</export>
</package>
