<package format="2">
	<name>rviz_marker_tools</name>
	<version>0.1.3</version>
	<description>Tools for marker creation / handling</description>

	<license>BSD</license>
	<author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>eigen</build_depend>
	<build_export_depend>eigen</build_export_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<exec_depend>geometry_msgs</exec_depend>

	<build_depend>liburdfdom-headers-dev</build_depend>

	<build_depend>roscpp</build_depend>
	<exec_depend>roscpp</exec_depend>

	<build_depend>std_msgs</build_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<exec_depend>std_msgs</exec_depend>

	<build_depend>tf2_eigen</build_depend>
	<exec_depend>tf2_eigen</exec_depend>

	<build_depend>visualization_msgs</build_depend>
	<build_export_depend>visualization_msgs</build_export_depend>
	<exec_depend>visualization_msgs</exec_depend>
</package>
