<package format="2">
	<name>rviz_marker_tools</name>
	<version>0.1.3</version>
	<description>Tools for marker creation / handling</description>

	<license>BSD</license>
	<author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>eigen3_cmake_module</buildtool_depend>
	<buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
	<build_depend>eigen</build_depend>
	<build_export_depend>eigen</build_export_depend>

	<build_depend>liburdfdom-headers-dev</build_depend>

	<depend>geometry_msgs</depend>
	<depend>moveit_common</depend>
	<depend>rclcpp</depend>
	<depend>tf2_eigen</depend>
	<depend>std_msgs</depend>
	<depend>visualization_msgs</depend>

	<export>
	  <build_type>ament_cmake</build_type>
	</export>
</package>
